--- a/static/custom.css
+++ b/static/custom.css
@@ -179,3 +179,55 @@
 .carousel-item {
 	transition: transform 1s ease;
 }
+
+.help-tip{
+    position: relative;
+    top: -0.25em;
+    right: 0;
+    text-align: center;
+	vertical-align: center;
+	align-content: center;
+    background-color: #0aa8f8;
+    border-radius: 50%;
+    font-size: 0.5em;
+    line-height: 1em;
+    cursor: help;
+	padding: 0.1em 0.5em;
+
+    font-weight: bold;
+    color:#fff;
+
+}
+.help-tip::before, .help-tip::after{
+	position: absolute;
+	left: 50%;
+	opacity: 0;
+	transition: allease0.3s;
+}
+.help-tip::before{
+	content: "";
+	border-width: 5px 5px 5px;
+	border-style: solid;
+	border-color: rgb(108, 108, 108) transparent transparent transparent;
+	top: -0.8em;
+	margin-left: -5px;
+}
+.help-tip::after{
+	content: attr(data-help-tip);
+	background: rgb(108, 108, 108);
+	top: -0.3em;
+	transform: translateY(-100%);
+	font-size: 2em;
+	font-weight:normal;
+    line-height: 1em;
+	width: 20em;
+	margin-left: -15em;
+	border-radius: 0.2em;
+	color: #fff;
+	padding: 0.3em;
+}
+
+/* Hover states */
+.help-tip:hover::before, .help-tip:hover::after{
+	opacity: 1;
+}
