--- a/static/custom.css
+++ b/static/custom.css
@@ -71,7 +71,16 @@
 	}
 }
 
-.link-style-2-red, .link-style-2-blue, .link-style-2-green, .link-style-2-purple {
+.link-style-1-yellow {
+	box-shadow: inset 0 0 0 0 #ffd414;
+  	color: #ffd414;
+	
+  	&:hover {
+	  box-shadow: inset 200px 0 0 0 #ffd414;
+	}
+}
+
+.link-style-2-red, .link-style-2-blue, .link-style-2-green, .link-style-2-purple, .link-style-1-yellow {
 	position: relative;
 	transition: color .3s ease-in-out;
 	text-shadow: 0.02em 0.02em 0.07em rgb(128, 128, 128);
